; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_hid_joypad.c_hid_joypad_query_pad.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_hid_joypad.c_hid_joypad_query_pad.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i8*, i32)* }

@generic_hid = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @hid_joypad_query_pad to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hid_joypad_query_pad(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @generic_hid, align 8
  %5 = icmp ne %struct.TYPE_2__* %4, null
  br i1 %5, label %6, label %19

6:                                                ; preds = %1
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @generic_hid, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32 (i8*, i32)*, i32 (i8*, i32)** %8, align 8
  %10 = icmp ne i32 (i8*, i32)* %9, null
  br i1 %10, label %11, label %19

11:                                               ; preds = %6
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @generic_hid, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32 (i8*, i32)*, i32 (i8*, i32)** %13, align 8
  %15 = call i64 (...) @hid_driver_get_data()
  %16 = inttoptr i64 %15 to i8*
  %17 = load i32, i32* %3, align 4
  %18 = call i32 %14(i8* %16, i32 %17)
  store i32 %18, i32* %2, align 4
  br label %20

19:                                               ; preds = %6, %1
  store i32 0, i32* %2, align 4
  br label %20

20:                                               ; preds = %19, %11
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i64 @hid_driver_get_data(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
